--- a/css/styles-mobile.css
+++ b/css/styles-mobile.css
@@ -1,4 +1,15 @@
 /* smartphone styles */
 
-@media only screen and (max-width:414px) {
+@media only screen and (max-width:374px) {
+
+	.container.theme-light {
+		background-image: url('../images/bg-mobile-light.jpg');
+		background-repeat: no-repeat;
+	}
+
+	.container.theme-dark {
+		background-image: url('../images/bg-mobile-dark.jpg');
+		background-repeat: no-repeat;
+	}
+
 }
