--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 * {
-  font-family: "Segoe UI", Arial, sans-serif;
+	font-family: 'Josefin Sans', sans-serif;
 	font-weight: 400;
-	font-size: 16px;
+	font-size: 18px;
 	box-sizing: border-box;
-	color: #0E2D22;
+	color: hsl(220, 98%, 61%);
 }
 
 html, body {
@@ -15,4 +15,13 @@ body *, *:before, *:after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+.container {
+	width: 100%;
+	height: 100%;
+}
+
+
+.theme-light {
 }
