--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 	font-weight: 400;
 	font-size: 18px;
 	box-sizing: border-box;
-	color: hsl(220, 98%, 61%);
+	/*color: hsl(220, 98%, 61%);*/
 }
 
 html, body {
@@ -20,8 +20,66 @@ body *, *:before, *:after {
 .container {
 	width: 100%;
 	height: 100%;
+	display: flex;
+	justify-content: center;
+}
+
+.wrapper {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	min-width: 20em;
+}
+
+button {
+	border: none;
+	background: transparent;
+	cursor: pointer;
+}
+
+.theme-light {
+}
+.theme-dark {
+	color: red;
+}
+
+.items-left-qnt {
+}
+
+.theme-light button,
+.theme-light .items-left-qnt span,
+.theme-light footer span {
+	color: #9B9BA4;
+}
+
+.theme-dark button,
+.theme-dark .items-left-qnt span,
+.theme-dark footer span {
+	color: #575874;
+}
+
+.theme-light input[type=text] {
+	color: #56546c;
+}
+
+.theme-dark input[type=text] {
+	color: white;
 }
 
 
-.theme-light {
+header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	margin: 70px  0 50px;
+}
+
+.logo {
+	text-transform: uppercase;
+	font-size: 1.9em;
+	letter-spacing: 0.4em;
+	font-weight: 700;
+	color: white;
 }
