--- a/css/styles-mobile.css
+++ b/css/styles-mobile.css
@@ -5,11 +5,13 @@
 	.container.theme-light {
 		background-image: url('../images/bg-mobile-light.jpg');
 		background-repeat: no-repeat;
+		background-position: center top;
 	}
 
 	.container.theme-dark {
 		background-image: url('../images/bg-mobile-dark.jpg');
 		background-repeat: no-repeat;
+		background-position: center top;
 	}
 
 }
