--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,10 @@ body *, *:before, *:after {
 
 .container {
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	display: flex;
 	justify-content: center;
+	align-items: flex-start;
 }
 
 .wrapper {
@@ -29,7 +30,11 @@ body *, *:before, *:after {
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
-	min-width: 20em;
+	min-width: 550px;
+}
+
+main {
+	width: 100%;
 }
 
 button {
@@ -38,10 +43,29 @@ button {
 	cursor: pointer;
 }
 
+input {
+	padding: 23px 9px 20px 0;
+	border: none;
+}
+
+
+input[type=text] {
+	width: 100%;
+	border-radius: 10px;
+}
+
+input[type=text]:focus {
+	outline: none;
+}
+
 .theme-light {
 }
 .theme-dark {
 	color: red;
+}
+
+.theme-light.container {
+	background-color: white;
 }
 
 .items-left-qnt {
@@ -51,6 +75,18 @@ button {
 .theme-light .items-left-qnt span,
 .theme-light footer span {
 	color: #9B9BA4;
+}
+
+.theme-light footer {
+}
+
+
+.theme-light .create-new-todo-section {
+	background-color: white;
+}
+
+.theme-dark .create-new-todo-section {
+	background-color: #25273c;
 }
 
 .theme-dark button,
@@ -73,7 +109,7 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	width: 100%;
-	margin: 70px  0 50px;
+	margin: 80px  0 50px;
 }
 
 .logo {
@@ -82,4 +118,78 @@ header {
 	letter-spacing: 0.4em;
 	font-weight: 700;
 	color: white;
+}
+
+.create-new-todo-section {
+	margin-bottom: 23px;
+	border-radius: 10px;
+}
+
+.create-new-todo-section input[type=text] {
+	border: none;
+	border-radius: 10px;
+}
+
+.create-new-todo-section .todo {
+	border: none;
+}
+
+.todo-list-section {
+	background-color: white;
+	width: 100%;
+	border-radius: 10px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.02), 0 6px 20px 0 rgba(0, 0, 0, 0.06);
+}
+
+.todo-list-section input[type=text]:first-child {
+	border-radius: 10px;
+}
+
+.todos,
+.todo {
+	width: 100%;
+}
+
+.todo {
+	display: flex;
+	align-items: center;
+	border-bottom: 1px #e3e3e3 solid;
+}
+
+.todo-done {
+	text-decoration: line-through;
+	color: silver !important;
+}
+
+.todos-footer {
+	display: flex;
+	justify-content: space-between;
+	padding: 15px 25px;
+}
+
+.todos-footer * {
+	font-size: 15px;
+}
+
+.todos-filter {
+}
+
+.todos-filter * {
+	margin: 0 5px;
+	font-weight: bold;
+}
+
+.active-filter {
+	color: #4B78CD !important;
+}
+
+footer {
+	margin-top: 50px;
+	display: flex;
+	width: 100%;
+}
+
+footer span {
+	margin: 0 auto;
+	font-size: 15px;
 }
