dark theme and mobile design had been applied

--- a/css/styles-desktop.css
+++ b/css/styles-desktop.css
@@ -2,19 +2,23 @@
 
 @media only screen and (min-width:375px) {
 
-	.container.theme-light {
+	.theme-light .container {
 		background-image: url('../images/bg-desktop-light.jpg');
 		background-repeat: no-repeat;
 		background-position: center top;
 	}
 
-	.container.theme-dark {
+	.theme-dark .container {
 		background-image: url('../images/bg-desktop-dark.jpg');
 		background-repeat: no-repeat;
 		background-position: center top;
 	}
 
 	.remove-todo-btn {
+		display: none;
+	}
+
+	.todos-filter-mobile {
 		display: none;
 	}
 }
