--- a/css/styles-mobile.css
+++ b/css/styles-mobile.css
@@ -1,17 +1,43 @@
 /* smartphone styles */
 
 @media only screen and (max-width:374px) {
+	
+	* {
+		font-size: 14px;
+	}
 
-	.container.theme-light {
+	.wrapper {
+		min-width: 150px;
+		margin: 0 20px;
+	}
+
+	.theme-light .container {
 		background-image: url('../images/bg-mobile-light.jpg');
 		background-repeat: no-repeat;
 		background-position: center top;
 	}
 
-	.container.theme-dark {
+	.theme-dark .container {
 		background-image: url('../images/bg-mobile-dark.jpg');
 		background-repeat: no-repeat;
 		background-position: center top;
 	}
 
+	header {
+		margin: 40px  0 25px;
+	}
+
+	.todos-filter {
+		display: none;
+	}
+
+	.todos-filter-mobile {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border-radius: 10px;
+	}
+	.todos-filter-mobile * {
+		margin: 0 10px;
+	}
 }
