--- a/css/styles.css
+++ b/css/styles.css
@@ -58,53 +58,6 @@ input[type=text]:focus {
 	outline: none;
 }
 
-.theme-light {
-}
-.theme-dark {
-	color: red;
-}
-
-.theme-light.container {
-	background-color: white;
-}
-
-.items-left-qnt {
-}
-
-.theme-light button,
-.theme-light .items-left-qnt span,
-.theme-light footer span,
-.there-is-no-todos {
-	color: #9B9BA4;
-}
-
-.theme-light footer {
-}
-
-
-.theme-light .create-new-todo-section {
-	background-color: white;
-}
-
-.theme-dark .create-new-todo-section {
-	background-color: #25273c;
-}
-
-.theme-dark button,
-.theme-dark .items-left-qnt span,
-.theme-dark footer span {
-	color: #575874;
-}
-
-.theme-light input[type=text] {
-	color: #56546c;
-}
-
-.theme-dark input[type=text] {
-	color: white;
-}
-
-
 header {
 	display: flex;
 	justify-content: space-between;
@@ -162,7 +115,6 @@ header {
 .todo {
 	display: flex;
 	align-items: center;
-	border-bottom: 1px #e3e3e3 solid;
 }
 
 .todo input[type=text]:hover + .remove-todo-btn {
@@ -180,7 +132,6 @@ header {
 
 .status-COMPLETED {
 	text-decoration: line-through;
-	color: silver !important;
 }
 
 .status-ACTIVE {
@@ -204,6 +155,11 @@ header {
 	font-weight: bold;
 }
 
+.todos-filter-mobile {
+	margin: 30px 0;
+	padding: 15px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.02), 0 6px 20px 0 rgba(0, 0, 0, 0.06);
+}
 .active-filter {
 	color: #4B78CD !important;
 }
